Creating first animation

--- a/css/styles.css
+++ b/css/styles.css
@@ -10,6 +10,16 @@ body {
     width: 600px;
     height: 300px;
 }
+
+#canvas_anim {
+    margin: 5px;
+    /* padding: 5px; */
+    background: #ffffff;
+    border: thin inset #a88e8e;
+    width: 600px;
+    height: 300px;
+}
+
 #canvas_car {
     margin: 20px;
     padding: 20px;
