--- a/css/styles.css
+++ b/css/styles.css
@@ -28,3 +28,20 @@ body {
     width: 600px;
     height: 300px;
 }
+
+#canvas_spritesheet_1 {
+    margin: 20px;
+    padding: 20px;
+    background: #ffffff;
+    border: thin inset #a88e8e;
+    width: 500px;
+    height: 500px;
+}
+#canvas_clipping {
+    margin: 20px;
+    padding: 20px;
+    background: #ffffff;
+    border: thin inset #a88e8e;
+    width: 500px;
+    height: 500px;
+}
