--- a/css/styles.css
+++ b/css/styles.css
@@ -1,14 +1,18 @@
+html,
 body {
+    width: 90%;
+    height: 90%;
+    margin: 5px;
     background: #dbdcdf83;
 }
-canvas{
-    margin: 20px;
-    padding: 20px;
+
+canvas {
+    margin: 5px;
+    padding: 5px;
     background: #ffffff;
     border: thin inset #a88e8e;
-    width: 500px;
-    height: 500px;    
 }
+
 #canvas {
     margin: 20px;
     padding: 20px;
@@ -23,8 +27,6 @@ canvas{
     /* padding: 5px; */
     background: #ffffff;
     border: thin inset #a88e8e;
-    width: 600px;
-    height: 300px;
 }
 
 #canvas_car {
@@ -32,8 +34,6 @@ canvas{
     padding: 20px;
     background: #ffffff;
     border: thin inset #a88e8e;
-    width: 600px;
-    height: 300px;
 }
 
 #canvas_spritesheet_1 {
@@ -41,14 +41,11 @@ canvas{
     padding: 20px;
     background: #ffffff;
     border: thin inset #a88e8e;
-    width: 500px;
-    height: 500px;
 }
+
 #canvas_clipping {
     margin: 20px;
     padding: 20px;
     background: #ffffff;
     border: thin inset #a88e8e;
-    width: 500px;
-    height: 500px;
 }
